--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:layout_constraintBottom_toTopOf="@id/tools_Top_Barrier"
         tools:layout_editor_absoluteX="81dp"
         tools:listitem="@layout/post" />
 
@@ -25,114 +24,114 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:contentDescription="@string/description_post_save"
-        app:layout_constraintBottom_toBottomOf="@id/tools_Top_Barrier"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add_36"
         />
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/tools_Top_Barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="content_Edit_Text,save_button" />
+<!--    <androidx.constraintlayout.widget.Barrier-->
+<!--        android:id="@+id/tools_Top_Barrier"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:barrierDirection="top"-->
+<!--        app:constraint_referenced_ids="content_Edit_Text,save_button" />-->
 
-    <ImageView
-        android:id="@+id/edit_icon"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:src="@drawable/ic_mode_edit_24"
-        app:srcCompat ="@drawable/ic_mode_edit_24"
-        android:visibility="visible"
-        app:layout_constraintTop_toTopOf="@id/edit_mode_description"
-        app:layout_constraintBottom_toBottomOf="@id/post_to_be_edited"
-        app:layout_constraintBottom_toTopOf="@id/tools_Top_Barrier"
-        tools:src="@drawable/ic_mode_edit_24"
-        android:contentDescription="@string/description_edit_avatar" />
+<!--    <ImageView-->
+<!--        android:id="@+id/edit_icon"-->
+<!--        android:layout_width="@dimen/icon_size"-->
+<!--        android:layout_height="@dimen/icon_size"-->
+<!--        android:src="@drawable/ic_mode_edit_24"-->
+<!--        app:srcCompat ="@drawable/ic_mode_edit_24"-->
+<!--        android:visibility="visible"-->
+<!--        app:layout_constraintTop_toTopOf="@id/edit_mode_description"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/post_to_be_edited"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/tools_Top_Barrier"-->
+<!--        tools:src="@drawable/ic_mode_edit_24"-->
+<!--        android:contentDescription="@string/description_edit_avatar" />-->
 
-    <TextView
-        android:id="@+id/edit_mode_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/edit_icon"
-        app:layout_constraintEnd_toStartOf="@id/cancel_edit_button"
-        app:layout_constraintBottom_toTopOf="@id/post_to_be_edited"
-        app:layout_constraintTop_toBottomOf="@id/container"
-        android:layout_marginStart="24dp"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:text="@string/description_post_edit"
-        android:textColor="#1D4FD0"
-        android:textStyle="bold"
-        />
+<!--    <TextView-->
+<!--        android:id="@+id/edit_mode_description"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toEndOf="@id/edit_icon"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/cancel_edit_button"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/post_to_be_edited"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/container"-->
+<!--        android:layout_marginStart="24dp"-->
+<!--        android:ellipsize="end"-->
+<!--        android:singleLine="true"-->
+<!--        android:text="@string/description_post_edit"-->
+<!--        android:textColor="#1D4FD0"-->
+<!--        android:textStyle="bold"-->
+<!--        />-->
 
-    <TextView
-        android:id="@+id/post_to_be_edited"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/edit_icon"
-        app:layout_constraintEnd_toStartOf="@id/cancel_edit_button"
-        app:layout_constraintTop_toBottomOf="@id/edit_mode_description"
-        app:layout_constraintBottom_toTopOf="@id/content_Edit_Text"
-        android:layout_marginStart="24dp"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:text="@string/post_to_be_edited"
+<!--    <TextView-->
+<!--        android:id="@+id/post_to_be_edited"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toEndOf="@id/edit_icon"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/cancel_edit_button"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/edit_mode_description"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/content_Edit_Text"-->
+<!--        android:layout_marginStart="24dp"-->
+<!--        android:ellipsize="end"-->
+<!--        android:singleLine="true"-->
+<!--        android:text="@string/post_to_be_edited"-->
 
-        />
+<!--        />-->
 
-    <ImageButton
-        android:id="@+id/cancel_edit_button"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/description_cancel_button"
-        android:src="@drawable/ic_cancel_24"
-        android:visibility="visible"
-        app:srcCompat="@drawable/ic_cancel_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tools_Top_Barrier"
-        app:layout_constraintTop_toTopOf="@id/edit_mode_description"
-        app:layout_constraintBottom_toBottomOf="@id/post_to_be_edited"
-        />
+<!--    <ImageButton-->
+<!--        android:id="@+id/cancel_edit_button"-->
+<!--        android:layout_width="@dimen/icon_size"-->
+<!--        android:layout_height="@dimen/icon_size"-->
+<!--        android:background="@android:color/transparent"-->
+<!--        android:contentDescription="@string/description_cancel_button"-->
+<!--        android:src="@drawable/ic_cancel_24"-->
+<!--        android:visibility="visible"-->
+<!--        app:srcCompat="@drawable/ic_cancel_24"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/tools_Top_Barrier"-->
+<!--        app:layout_constraintTop_toTopOf="@id/edit_mode_description"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/post_to_be_edited"-->
+<!--        />-->
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/edit_mode_description_group"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="edit_mode_description,post_to_be_edited,edit_icon, cancel_edit_button"
-        app:layout_constraintBottom_toTopOf="@+id/content_Edit_Text"
-        android:visibility="gone"
-        />
+<!--    <androidx.constraintlayout.widget.Group-->
+<!--        android:id="@+id/edit_mode_description_group"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:constraint_referenced_ids="edit_mode_description,post_to_be_edited,edit_icon, cancel_edit_button"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/content_Edit_Text"-->
+<!--        android:visibility="gone"-->
+<!--        />-->
 
-    <EditText
-        android:id="@+id/content_Edit_Text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/post_text"
-        android:inputType="textMultiLine"
-        android:background="@android:color/transparent"
-        android:padding="@dimen/common_spacing"
-        android:importantForAutofill="no"
-        app:layout_constraintTop_toTopOf="@id/tools_Top_Barrier"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/save_button"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+<!--    <EditText-->
+<!--        android:id="@+id/content_Edit_Text"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="@string/post_text"-->
+<!--        android:inputType="textMultiLine"-->
+<!--        android:background="@android:color/transparent"-->
+<!--        android:padding="@dimen/common_spacing"-->
+<!--        android:importantForAutofill="no"-->
+<!--        app:layout_constraintTop_toTopOf="@id/tools_Top_Barrier"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/save_button"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        />-->
 
-    <ImageButton
-        android:id="@+id/save_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/save_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/content_Edit_Text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_circus_save_24"
+<!--    <ImageButton-->
+<!--        android:id="@+id/save_button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="@dimen/common_spacing"-->
+<!--        android:background="@android:color/transparent"-->
+<!--        android:contentDescription="@string/save_button"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@id/content_Edit_Text"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        android:src="@drawable/ic_circus_save_24"-->
 
-        />
+<!--        />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
